test/types/tuple/bharshbarg/intentTupleGroup.good
intentTupleGroup.chpl:1: error: intents on tuple-grouped arguments are not yet supported
