test/types/tuple/bharshbarg/intentTupleGroup.chpl
proc foo(in (x, y)) {
  writeln(x, y);
}
